Atualização Jogo da Velha

--- a/JogoDaVelha/index.html
+++ b/JogoDaVelha/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <h1 id="title">Jogo da Velha</h1>
-        <a href="./tictactoe.html" target="_self"><h2 class="titleButtons">Jogar</h2></a>
+        <a href="./singlePlayer.html" target="_self"><h2 class="titleButtons">Um Jogador</h2></a>
+        <br>
+        <a href="./multiPlayer.html" target="_self"><h2 class="titleButtons">Dois Jogadores</h2></a>
         <br>
         <a href="https://www.youtube.com/watch?v=oxxJRZIZthg" target="_self"><h2 class="titleButtons">Sair</h2></a>
 
