--- a/JogoDaVelha/singlePlayer.html
+++ b/JogoDaVelha/singlePlayer.html
@@ -24,6 +24,6 @@
         <h1 id="feedback"></h1>
         <button id="restartBtn">Restartar</button>
 
-        <script src="./tictactoe.js"></script>
+        <script src="./singlePlayer.js"></script>
     </body>
 </html>
