--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <h1>Projetos</h1>
-        <a href="./CalculadoraMedia/index.html"><p>Calculadora - Média</p></a>
-        <a href="./Cronometro/index.html"><p>Cronomêtro</p></a>
-        <a href="./JogoDaForca/index.html"><p>Jogo da forca</p></a>
-        <a href="./JogoDaVelha/index.html"><p>Jogo da velha</p></a>
-        <a href="./PedraPapelTesoura/index.html"><p>Pedra, papel e tesoura</p></a>
-        <a href="./ToDoList/out/index.html"><p>To-Do List</p></a>
+        <a href="./JS/CalculadoraMedia/index.html"><p>Calculadora - Média</p></a>
+        <a href="./JS/Cronometro/index.html"><p>Cronomêtro</p></a>
+        <a href="./JS/JogoDaForca/index.html"><p>Jogo da forca</p></a>
+        <a href="./JS/JogoDaVelha/index.html"><p>Jogo da velha</p></a>
+        <a href="./JS/PedraPapelTesoura/index.html"><p>Pedra, papel e tesoura</p></a>
+        <a href="./TS/ToDoList/out/index.html"><p>To-Do List</p></a>
     </body>
 </html>
