--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <a href="./JS/JogoDaVelha/index.html"><p>Jogo da velha</p></a>
         <a href="./JS/PedraPapelTesoura/index.html"><p>Pedra, papel e tesoura</p></a>
         <a href="./TS/ToDoList/out/index.html"><p>To-Do List</p></a>
+        <a href="./TS/JogoDaCobrinha/out/index.html"><p>Jogo da Cobrinha</p></a>
     </body>
 </html>
