--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <a href="./JS/PedraPapelTesoura/index.html"><p>Pedra, papel e tesoura</p></a>
         <a href="./TS/ToDoList/out/index.html"><p>To-Do List</p></a>
         <a href="./TS/JogoDaCobrinha/out/index.html"><p>Jogo da Cobrinha</p></a>
+        <a href="./JS/GeniusGame/index.html"><p>Genius</p></a>
     </body>
 </html>
