--- a/JS/Cronometro/index.html
+++ b/JS/Cronometro/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cronomêtro</title>
+        <title>Cronômetro</title>
+        <link rel="stylesheet" href="./reset.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+        </style>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <div id="container">
-            <div id="timeDisplay">0:00:00</div>
-            <button id="start" class="timerButtons">Começar</button>
-            <button id="pause" class="timerButtons">Pausar</button>
-            <button id="reset" class="timerButtons">Resetar</button>
+        <div id="clock">
+            <h1 id="time">00:00:00</h1>
+            <div id="buttons">
+                <button id="start-button">Start</button>
+                <button id="stop-button">Stop</button>
+                <button id="reset-button">Reset</button>
+            </div>
         </div>
-        <script src="./index.js"></script>
     </body>
+    <script src="./script.js"></script>
 </html>
