Escrevi cronometro errado, sou burrinho

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Projetos</h1>
         <a href="./JS/CalculadoraMedia/index.html"><p>Calculadora - Média</p></a>
-        <a href="./JS/Cronometro/index.html"><p>Cronomêtro</p></a>
+        <a href="./JS/Cronometro/index.html"><p>Cronômetro</p></a>
         <a href="./JS/JogoDaForca/index.html"><p>Jogo da forca</p></a>
         <a href="./JS/JogoDaVelha/index.html"><p>Jogo da velha</p></a>
         <a href="./JS/PedraPapelTesoura/index.html"><p>Pedra, papel e tesoura</p></a>
