--- a/JS/CalculadoraMedia/index.html
+++ b/JS/CalculadoraMedia/index.html
@@ -3,22 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculadora - Média</title>
+        <title>Document</title>
+        <link rel="stylesheet" href="./reset.css">
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <div id="container">
-            <h1 id="title">Calculadora de Média</h1>
+            <h1>Calculadora de Média</h1>
+            <input type="number" id="media" placeholder="Insira sua média. Ex: 7">
+            <input type="submit" value="Enviar" id="submit">
 
-            <label for="average">Insira a sua média:</label>
-            <input type="number" id="average">
-            <br>
-            <br>
-            <button id="submit">Calcular</button>
-            <h2 class="response"></h2>
-            <h2 class="response"></h2>
+            <p id="feedback">placeholder</p>
+            <p id="final">placeholder</p>
         </div>
-
-        <script src="./index.js"></script>
     </body>
+    <script src="./script.js"></script>
 </html>
