--- a/JS/PedraPapelTesoura/index.html
+++ b/JS/PedraPapelTesoura/index.html
@@ -4,18 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pedra Papel Tesoura</title>
+        <link rel="stylesheet" href="./reset.css">
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <div id="container">
-            <h1>Pedra Papel Tesoura</h1>
+            <h1 id="title">Pedra Papel Tesoura</h1>
             <h1 id="playerChoice">Jogador:  </h1>
             <h1 id="computerChoice">Computador:  </h1>
             <h1 id="result">------</h1>
 
-            <button class="myButtons">🪨</button>
-            <button class="myButtons">📃</button>
-            <button class="myButtons">✂️</button>
+            <div id="buttons">
+                <button class="myButtons">🪨</button>
+                <button class="myButtons">📃</button>
+                <button class="myButtons">✂️</button>
+            </div>
         </div>
 
         <script src="./index.js"></script>
