--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <h1>Projetos</h1>
-        <a href="./JS/CalculadoraMedia/index.html"><p>Calculadora - Média</p></a>
-        <a href="./JS/Cronometro/index.html"><p>Cronômetro</p></a>
-        <a href="./JS/JogoDaForca/index.html"><p>Jogo da forca</p></a>
-        <a href="./JS/JogoDaVelha/index.html"><p>Jogo da velha</p></a>
-        <a href="./JS/PedraPapelTesoura/index.html"><p>Pedra, papel e tesoura</p></a>
-        <a href="./TS/ToDoList/out/index.html"><p>To-Do List</p></a>
-        <a href="./TS/JogoDaCobrinha/out/index.html"><p>Jogo da Cobrinha</p></a>
-        <a href="./JS/GeniusGame/index.html"><p>Genius</p></a>
+        <p><a href="./JS/CalculadoraMedia/index.html">Calculadora - Média</a></p>
+        <p><a href="./JS/Cronometro/index.html">Cronômetro</a></p>
+        <p><a href="./JS/JogoDaForca/index.html">Jogo da forca</a></p>
+        <p><a href="./JS/JogoDaVelha/index.html">Jogo da velha [Falta melhora]</a></p>
+        <p><a href="./JS/PedraPapelTesoura/index.html">Pedra, papel e tesoura [Falta melhora]</a></p>
+        <p><a href="./TS/ToDoList/out/index.html">To-Do List [Falta melhora]</a></p>
+        <p><a href="./TS/JogoDaCobrinha/out/index.html">Jogo da Cobrinha [Falta melhora]</a></p>
+        <p><a href="./JS/GeniusGame/index.html">Genius [Falta melhora]</a></p>
     </body>
 </html>
